--- a/app/src/main/res/layout/activity_group_chat2.xml
+++ b/app/src/main/res/layout/activity_group_chat2.xml
@@ -15,10 +15,26 @@
                 android:layout_marginBottom="60dp"/>
         </LinearLayout>
     </ScrollView>
-    <LinearLayout android:id="@+id/myLinearLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_alignParentBottom="true" android:layout_alignParentStart="true">
-        <EditText android:id="@+id/input_group_message" android:layout_width="370dp" android:layout_height="wrap_content" android:hint="write your message here..." android:padding="17dp"/>
-        <ImageButton android:id="@+id/send_message_button" android:layout_width="50dp"
+    <LinearLayout
+        android:id="@+id/myLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:id="@+id/input_group_message"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            android:hint="write your message here..."
+            android:padding="17dp"/>
+
+        <ImageButton
+            android:id="@+id/send_message_button"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_next"/>
     </LinearLayout>
+
 </RelativeLayout>
