--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,11 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/colorSecondaryText"
     tools:context="ui.MessageActivity">
-
-
-
-
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/bar_layout"
@@ -89,7 +86,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:enabled="false"
-                android:backgroundTint="#fff"
+                android:backgroundTint="@color/colorValid"
                 android:background="@drawable/ic_launcher_foreground"
                 android:id="@+id/send_messsage_btn"
                 android:layout_margin="10dp"/>
