--- a/app/src/main/res/layout/layoutofusers.xml
+++ b/app/src/main/res/layout/layoutofusers.xml
@@ -18,9 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/image_user_userfrag"
-        android:textStyle="bold"
         android:id="@+id/username_userfrag"
         android:textSize="18sp"
+        android:fontFamily="@font/poppins_medium"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="2dp"
@@ -61,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="Message"
+        android:fontFamily="@font/poppins_regular"
         android:layout_marginTop="2dp"
         android:textSize="15sp"
         android:textStyle="italic"
