--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -45,7 +45,7 @@
                             android:layout_marginBottom="15dp">
 
                             <TextView
-                                android:id="@+id/title"
+                                android:id="@+id/titleD"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Welcome"
@@ -103,12 +103,197 @@
                         app:fontFamily="@font/poppins_medium"
                         android:textColor="@color/colorPrimaryText"/>
 
-                    <ListView android:id="@+id/list_view_dashboard"
+                    <HorizontalScrollView
+                        android:id="@+id/departmentsList"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
 
+                        <LinearLayout
+                            android:id="@+id/departments"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="170dp"
+                                android:elevation="60dp"
+                                android:layout_marginRight="18dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="20dp">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:padding="16dp"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/departmentImageView1"
+                                        android:layout_width="90dp"
+                                        android:layout_gravity="center"
+                                        android:layout_height="90dp"
+                                        android:src="@drawable/stethoscope"/>
+                                    <TextView
+                                        android:id="@+id/departmentName1"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:textAlignment="center"
+                                        android:layout_gravity="center"
+                                        android:fontFamily="@font/poppins_medium"
+                                        android:text="Oncology"
+                                        android:textSize="11sp"
+                                        android:layout_margin="12dp"
+                                        android:textColor="@color/colorPrimaryText"/>
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="170dp"
+                                android:elevation="60dp"
+                                android:layout_marginRight="18dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="20dp">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:padding="16dp"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/departmentImageView2"
+                                        android:layout_width="90dp"
+                                        android:layout_gravity="center"
+                                        android:layout_height="90dp"
+                                        android:src="@drawable/heart"/>
+                                    <TextView
+                                        android:id="@+id/departmentName2"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:textAlignment="center"
+                                        android:layout_gravity="center"
+                                        android:fontFamily="@font/poppins_medium"
+                                        android:text="Cardiology"
+                                        android:textSize="11sp"
+                                        android:layout_margin="12dp"
+                                        android:textColor="@color/colorPrimaryText"/>
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="170dp"
+                                android:elevation="60dp"
+                                android:layout_marginRight="18dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="20dp">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:padding="16dp"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/departmentImageView3"
+                                        android:layout_width="90dp"
+                                        android:layout_gravity="center"
+                                        android:layout_height="90dp"
+                                        android:src="@drawable/healthcare"/>
+                                    <TextView
+                                        android:id="@+id/departmentName3"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:textAlignment="center"
+                                        android:layout_gravity="center"
+                                        android:fontFamily="@font/poppins_medium"
+                                        android:text="Neurology"
+                                        android:textSize="11sp"
+                                        android:layout_margin="12dp"
+                                        android:textColor="@color/colorPrimaryText"/>
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="170dp"
+                                android:elevation="60dp"
+                                android:layout_marginRight="18dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="20dp">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:padding="16dp"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/departmentImageView4"
+                                        android:layout_width="90dp"
+                                        android:layout_gravity="center"
+                                        android:layout_height="90dp"
+                                        android:src="@drawable/ic_psychology"/>
+                                    <TextView
+                                        android:id="@+id/departmentName4"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:textAlignment="center"
+                                        android:layout_gravity="center"
+                                        android:fontFamily="@font/poppins_medium"
+                                        android:text="Psychology"
+                                        android:textSize="11sp"
+                                        android:layout_margin="12dp"
+                                        android:textColor="@color/colorPrimaryText"/>
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="170dp"
+                                android:elevation="60dp"
+                                android:layout_marginRight="18dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="20dp">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:padding="16dp"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/departmentImageView5"
+                                        android:layout_width="90dp"
+                                        android:layout_gravity="center"
+                                        android:layout_height="90dp"
+                                        android:src="@drawable/medicine"/>
+                                    <TextView
+                                        android:id="@+id/departmentName5"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:textAlignment="center"
+                                        android:layout_gravity="center"
+                                        android:fontFamily="@font/poppins_medium"
+                                        android:text=""
+                                        android:textSize="14sp"
+                                        android:layout_margin="12dp"
+                                        android:textColor="@color/colorPrimaryText"/>
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
 
 
                     <TextView
